{{$NEXT}}
   - Add construct() helper methods to PDF::Action::GoTo and
     PDF::Action::GoToR, and PDF::Action::URI methods

0.5.4  2022-06-09T14:33:45+12:00
   - Fix PDF::Field coerce-field() for compatibility with FDF::Field (FDF module)

0.5.3  2022-06-09T10:14:02+12:00
   - Fix script pdf-content-dump.raku
   - Adjust tests for PDF::Content 0.6.4+ simplified ops AST
   - Use PDF::Grammar 0.3.0+ simplified AST for Postscript functions

0.5.2  2022-06-07T17:20:38+12:00
   - Adjust tests for PDF 0.5.8+ which has a simplified AST

0.5.1  2022-05-11T09:06:10+12:00
   - Use PDF::Content 0.6.1 core font cache. Prefer core-font loading
     at the PDF level.

0.5.0  2022-03-31T07:18:55+13:00
  - Added Attributes for PDF::StructElem /A entry. Also used for PDF::StructTreeRoot
    /ClassMap entry.
  - Also added PDF::StructElem vivify-attributes() method to set-up an attributes
    object for a particular owner (/O entry).
  - move release repository from CPAN to zef ecosystem

0.4.18  2021-12-17T07:34:24+13:00
  - Fix PDF::Outline(s) add-kid() method to work with named destinations.

0.4.17  2021-10-14T11:50:40+13:00
  - Fix handling of /G entry in PDF::Mask. It references an XObject Form
    with a /Group transparency group entry, rather than a transparency group
  - remove catalog /OpenAction entry in pdf-burst.raku; to avoid secondary
    page references

0.4.16  2021-10-09T09:33:31+13:00
  - Use PDF::Content v0.5.7+ PDF::Content::Canvas role for composing
    XObject Form and Tiling Pattern classes
  - Replace canvas(&code) with html-canvas(&code) in pdf-canvas.t
    as deprecated in PDF::Content v0.5.8+

0.4.15  2021-08-07T06:53:26+12:00
  - fixed type checks for Type0 font /Encoding entry and Mask /G
    (transparency-group) entry.
  - fixed #19 /Resources entry placement by removing initialization of
    /ProcSet[ /PDF /Text ]. This is marked obsolete in ISO-32000. It's
    purpose is/was to support conversion to PostScript in older drivers.
